Work on exercises

--- a/exercises/2-parallel-processing/index.html
+++ b/exercises/2-parallel-processing/index.html
@@ -2,7 +2,8 @@
 	<head>
 		<script src="../../lib/rsvp.js"></script>
 		<script src="../../lib/util.js"></script>
-		<script src="run.js"></script>
+    <script src="setup.js"></script>
+		<script src="answer.js"></script>
 	</head>
 	<body>
 		<div id="message">Wait for it...</div>
