--- a/examples/hello-world/index.html
+++ b/examples/hello-world/index.html
@@ -1,7 +1,6 @@
 <html>
 	<head>
-		<script src="../../lib/bluebird.js"></script>
-		<script src="../../source/promise-library.js"></script>
+		<script src="../../lib/rsvp.js"></script>
 		<script src="../../lib/util.js"></script>
 		<script src="run.js"></script>
 	</head>
