--- a/exercises/6-utility/index.html
+++ b/exercises/6-utility/index.html
@@ -6,6 +6,7 @@
 		<div id="message">Wait for it...</div>
 
 		<script src="../../lib/rsvp.js"></script>
+		<script src="../../lib/underscore.js"></script>
 		<script src="../../lib/util.js"></script>
 		<script src="setup.js"></script>
 		<script src="main.js"></script>
