--- a/exercises/3-parallel-processing/index.html
+++ b/exercises/3-parallel-processing/index.html
@@ -8,6 +8,6 @@
     <script src="../../lib/rsvp.js"></script>
     <script src="../../lib/util.js"></script>
     <script src="setup.js"></script>
-    <script src="main.js"></script>
+    <script src="answer.js"></script>
 	</body>
 </html>
